--- a/01-ansible-storagegrid-create-tenant.yml
+++ b/01-ansible-storagegrid-create-tenant.yml
@@ -26,7 +26,7 @@
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
       state: present
-      name: thePub
+      name: pec-workshop
       protocol: s3
       management: true
       use_own_identity_source: false
