--- a/02-ansible-storagegrid-create-group.yml
+++ b/02-ansible-storagegrid-create-group.yml
@@ -3,7 +3,7 @@
   collections:
     - netapp.storagegrid
   vars_files:
-    /root/git/sg_vars.yaml
+    /root/git/storagegrid-workshop/sg_vars.yml
   gather_facts: no
   tasks:
   - name: Get grid authorization token
