--- a/02-ansible-storagegrid-create-group.yml
+++ b/02-ansible-storagegrid-create-group.yml
@@ -6,50 +6,21 @@
     /root/git/storagegrid-workshop/01-sg_vars.yml
   gather_facts: no
   tasks:
-  - name: Get grid authorization token
-    uri:
-      url: "{{ grid_admin_base_url }}/api/v3/authorize"
-      method: POST
-      body: {
-        "username": "{{ grid_username }}",
-        "password": "{{ grid_password }}",
-        "cookie": false,
-        "csrfToken": false
-      }
-      body_format: json
-      validate_certs: false
-    register: auth
+  # - name: Get grid authorization token
+    # uri:
+    #   url: "{{ grid_admin_base_url }}/api/v3/authorize"
+    #   method: POST
+    #   body: {
+    #     "username": "{{ grid_username }}",
+    #     "password": "{{ grid_password }}",
+    #     "cookie": false,
+    #     "csrfToken": false
+    #   }
+    #   body_format: json
+    #   validate_certs: false
+    # register: auth
  
-  - name: Create a StorageGRID Tenant
-    nac_sg_grid_account:
-      api_url: "{{ grid_admin_base_url }}"
-      auth_token: "{{ auth.json.data }}"
-      validate_certs: false
-      state: present
-      name: pec-workshop
-      protocol: s3
-      management: true
-      use_own_identity_source: false
-      allow_platform_services: false
-      password: "{{ tenant_password }}"
-      quota_size: 100
-    register: account
- 
-  - name: Get user authorization token
-    uri:
-      url: "{{ grid_admin_base_url }}/api/v3/authorize"
-      method: POST
-      body: {
-        "accountId": "{{ account.resp.id }}",
-        "username": "{{ tenant_username }}",
-        "password": "{{ tenant_password }}",
-        "cookie": false,
-        "csrfToken": false
-      }
-      body_format: json
-      validate_certs: false
-    register: auth
-  
+
   - name: Get user authorization token
     uri:
       url: "{{ grid_admin_base_url }}/api/v3/authorize"
@@ -72,7 +43,7 @@
       validate_certs: false
       state: present
       display_name: ansible-group
-      unique_name: group/ansible-group
+      unique_name: group/"{{ tenant_group }}"
       management_policy:
         manage_all_containers: true
         manage_endpoints: true
