--- a/04-ansible-storagegrid-create-keys.yml
+++ b/04-ansible-storagegrid-create-keys.yml
@@ -65,21 +65,6 @@
       validate_certs: false
     register: auth
  
-  - name: Create a group
-    nac_sg_org_group:
-      api_url: "{{ grid_admin_base_url }}"
-      auth_token: "{{ auth.json.data }}"
-      validate_certs: false
-      state: present
-      display_name: thePub-Patrons
-      unique_name: group/thepub-patrons
-      management_policy:
-        manage_all_containers: true
-        manage_endpoints: true
-        manage_own_s3_credentials: false
-        root_access: false
-      s3_policy: {"Statement":[{"Effect":"Allow","Action":"s3:*","Resource":"arn:aws:s3:::*"}]}
- 
  
   - name: Create a s3 key for our users
     nac_sg_org_user_s3_key:
@@ -88,5 +73,5 @@
       validate_certs: false
       state: present
       unique_user_name: "user/{{ item }}"
-    with_items: "{{ users }}"
+    with_items: "{{ tenant_users }}"
  
