--- a/05-ansible-storagegrid-create-bucket.yml
+++ b/05-ansible-storagegrid-create-bucket.yml
@@ -56,4 +56,5 @@
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
       state: present
-      name: "{{ tenant_bucket }}"
+      name: "{{ item }}"
+    with_items: "{{ tenant_bucket }}"
