adding buckets for s3 testing

--- a/01-sg_vars.yml
+++ b/01-sg_vars.yml
@@ -11,6 +11,9 @@
       - ansible-bucket
       - storagegrid-integration
       - bucket-elasticsearch
+      - gold
+      - silver 
+      - bronze
     tenant_users:
       - bill
       - ted
