--- a/01-sg_vars.yml
+++ b/01-sg_vars.yml
@@ -7,6 +7,7 @@
     tenant_username: root
     tenant_password: netapp01
     tenant_name: sgworkshop-test
+    tenant_quota: 200
     tenant_bucket:
       - ansible-bucket
       - storagegrid-integration
@@ -14,6 +15,7 @@
       - gold
       - silver 
       - bronze
+      - cloudmirror-destination
     tenant_users:
       - bill
       - ted
