--- a/Module-4/logstash-pipeline-02.conf
+++ b/Module-4/logstash-pipeline-02.conf
@@ -5,13 +5,13 @@ input {
         port => "5044"
     }
 }
-# The filter part of this file is commented out to indicate that it is
-# optional.
-{
+filter {
     grok {
-        match => { "message" => "%{TIMESTAMP_ISO8601}"}
-    }    
+        match => { "message" => "%{TIMESTAMP_ISO8601}%{GREEDYDATA:message}"}
+    }
 }
 output {
-    stdout { codec => rubydebug }
+    elasticsearch {
+        hosts => [ "192.168.0.61:9200" ]
+    }
 }
