--- a/Module-0/01-ansible-storagegrid-complete.yml
+++ b/Module-0/01-ansible-storagegrid-complete.yml
@@ -3,7 +3,7 @@
   collections:
     - netapp.storagegrid
   vars_files:
-    /root/git/sg_vars.yaml
+    /root/git/storagegrid-workshop/Module-0/sg_vars.yaml
   gather_facts: no
   tasks:
   - name: Get grid authorization token
