--- a/Module-0/01-ansible-storagegrid-complete.yml
+++ b/Module-0/01-ansible-storagegrid-complete.yml
@@ -21,7 +21,7 @@
     register: auth
  
   - name: Create a StorageGRID Tenant
-    nac_sg_grid_account:
+    na_sg_grid_account:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
@@ -51,7 +51,7 @@
     register: auth
  
   - name: Create a group
-    nac_sg_org_group:
+    na_sg_org_group:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
@@ -66,7 +66,7 @@
       s3_policy: {"Statement":[{"Effect":"Allow","Action":"s3:*","Resource":"arn:aws:s3:::*"}]}
  
   - name: Create users
-    nac_sg_org_user:
+    na_sg_org_user:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
@@ -77,7 +77,7 @@
     with_items: "{{ users }}"
  
   - name: Create a s3 key for our users
-    nac_sg_org_user_s3_key:
+    na_sg_org_user_s3_key:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
@@ -86,7 +86,7 @@
     with_items: "{{ users }}"
  
   - name: Create a s3 bucket
-    nac_sg_org_container:
+    na_sg_org_container:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
