--- a/Module-0/03-ansible-storagegrid-create-user.yml
+++ b/Module-0/03-ansible-storagegrid-create-user.yml
@@ -21,7 +21,7 @@
     register: auth
   
   - name: Obtain StorageGRID Account Token
-    nac_sg_grid_account:
+    na_sg_grid_account:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
@@ -51,7 +51,7 @@
     register: auth
  
   - name: Create users
-    nac_sg_org_user:
+    na_sg_org_user:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
