--- a/Module-0/05-ansible-storagegrid-create-bucket.yml
+++ b/Module-0/05-ansible-storagegrid-create-bucket.yml
@@ -21,7 +21,7 @@
     register: auth
   
   - name: Obtain StorageGRID Account Token
-    nac_sg_grid_account:
+    na_sg_grid_account:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
@@ -51,7 +51,7 @@
     register: auth
  
   - name: Create a s3 bucket
-    nac_sg_org_container:
+    na_sg_org_container:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
