--- a/Module-0/02-ansible-storagegrid-create-group.yml
+++ b/Module-0/02-ansible-storagegrid-create-group.yml
@@ -21,7 +21,7 @@
     register: auth
  
   - name: Obtain StorageGRID Account Token
-    na_sg_grid_account:
+    nac_sg_grid_account:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
@@ -51,7 +51,7 @@
     register: auth
 
   - name: Create a group
-    na_sg_org_group:
+    nac_sg_org_group:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
