--- a/Module-0/04-ansible-storagegrid-create-keys.yml
+++ b/Module-0/04-ansible-storagegrid-create-keys.yml
@@ -21,7 +21,7 @@
     register: auth
 
   - name: Obtain StorageGRID Account Token
-    na_sg_grid_account:
+    nac_sg_grid_account:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
@@ -36,7 +36,7 @@
     register: account
  
   - name: Create a StorageGRID Tenant
-    na_sg_grid_account:
+    nac_sg_grid_account:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
@@ -67,7 +67,7 @@
  
  
   - name: Create a s3 key for our users
-    na_sg_org_user_s3_key:
+    nac_sg_org_user_s3_key:
       api_url: "{{ grid_admin_base_url }}"
       auth_token: "{{ auth.json.data }}"
       validate_certs: false
